src/main/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-producer-consumer-service
  namespace: kafka
spec:
  selector:
    app: kafka-producer-consumer
  ports:
  - protocol: TCP
    port: 8181
    targetPort: 8181
